src/objects/Material_Forms__c.object
<CustomObject>
    <description>This object is used to store blank forms for Material Request UI.</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                    <default>true</default>
                    <label>Member</label>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Category</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FulfillmentType_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FulfillmentType Description</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FulfillmentType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FulfillmentType</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRE__c</fullName>
        <description>Unique identifier for documents</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MRE#</label>
        <length>228</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialFormsExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MaterialFormsExternalID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Original_Request_Source_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Original Request Source ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quantity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <label>Service Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OX</fullName>
                </value>
                <value>
                    <fullName>OL</fullName>
                </value>
                <value>
                    <fullName>LF</fullName>
                </value>
                <value>
                    <fullName>TU</fullName>
                </value>
                <value>
                    <fullName>UH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Material Forms</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Materials Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>